# enguerrand

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
app/: CMakeLists.txt  CirclesTracker.cpp  CirclesTracker.h  EKFOdometry.h  EdgeDetectionCPU.cpp  Engine.cpp  Engine.h  EngineFrame.cpp  EngineFrame.h  EngineGraph.cpp  EngineGraph.h  LineFitter.cpp  OdometryCode.cpp  OdometryCode.h  TrackedCircle.cpp  main.cpp
app/dataaugmentation/: CMakeLists.txt  VariantGenerator.cpp  VariantGenerator.h  main.cpp
app/demo/: CMakeLists.txt  main.cpp
app/frontend/: CMakeLists.txt  CalibrationData.h  CirclesTracker.cpp  CirclesTracker.h  EKFOdometry.cpp  EKFOdometry.h  EdgeDetectionCPU.h  Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  EngineGraph.cpp  EngineGraph.h  main.cpp
app/histogrambuilder/: CMakeLists.txt  main.cpp
app/learnhistograms/: CMakeLists.txt  DataDirIterator.cpp  DataDirIterator.h  Histogram.cpp  Histogram.h  HistogramValidator.cpp  HistogramValidator.h  HistogramValidatorSVM.cpp  HistogramValidatorSVM.h  ObservationValidator.cpp  ObservationValidator.h  main.cpp
app/learnobservations/: CMakeLists.txt  DataDirIterator.h  main.cpp
cmake/: FindTBB.cmake  Findlibsvm.cmake  Findlibusb.cmake  Findvpx.cmake  enguerrand-config.cmake.in
config/: calibration.json  config_faber.json  config_ingenium.json  config_netbook.json
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/core/: AlignmentOdometry.cpp  AlignmentOdometry.h  BAOdometry.cpp  BAOdometry.h  CMakeLists.txt  CalibrationData.cpp  CalibrationData.h  CircleDetector.cpp  CircleDetector.h  CircleTracker.cpp  CircleTracker.h  CirclesTracker.cpp  CirclesTracker.h  CoreConstants.h  EKFOdometry.cpp  EKFOdometry.h  EdgeDetection.cpp  EdgeDetection.h  EdgeDetectionCPU.cpp  EdgeDetectionCPU.h  EdgeDetectionGPU.cu  EdgeDetectionGPU.h  NullOdometry.h  ObservationValidator.cpp  ObservationValidator.h  ObservationValidatorSVM.cpp  ObservationValidatorSVM.h  ObservationValidatorSimple.cpp  ObservationValidatorSimple.h  OdometryCode.h  OdometryHelpers.cpp  OdometryHelpers.h  PFOdometry.cpp  PFOdometry.h  SE3Parameterization.cpp  Tensor.h
src/ekfslam/: CMakeLists.txt  EKFSLAMEngine.cpp  EKFSLAMEngine.h
src/engine/: BAOdometry.cpp  BAOdometry.h  BAOdometry2.cpp  BAOdometry2.h  CMakeCache.txt  CMakeLists.txt  CalibrationData.cpp  CirclesTracker.cpp  CirclesTracker.h  EKFOdometry.cpp  EKFOdometry.h  EdgeDetectionCPU.h  Engine.cpp  Engine.h  EngineBase.cpp  EngineBase.h  EngineConfig.cpp  EngineConfig.h  EngineGraph.cpp  EngineGraph.h  EngineListener.cpp  EngineListener.h  EngineOutput.cpp  EngineOutput.h  Histogram.cpp  Histogram.h  NullOdometry.cpp  OdometryCode.cpp  OdometryCode.h  PFOdometry.cpp  PFOdometry.h  SE3Parameterization.h  TrackedCircle.h
src/fastslam/: CMakeLists.txt  FastSLAMEngine.cpp  FastSLAMEngine.h
src/pipeline/: CMakeLists.txt  PipelineDescription.cpp  PipelineDescription.h  PipelineEngine.cpp  PipelineEngine.h  PipelineModule.cpp  PipelineModule.h  PipelineModuleWrapper.cpp  PipelineModuleWrapper.h  PipelinePort.cpp  PipelinePort.h  PipelineThread.cpp  PipelineThread.h  PipelineUtils.cpp  PipelineUtils.h
src/slam/: CMakeLists.txt  CircleFitter.cpp  CirclesDetection.cpp  CirclesDetection.h  EKFSLAM.cpp  EKFSLAM.h  EdgeCirclesData.cpp  EdgeCirclesData.h  EdgeCirclesPort.h  EdgeDetectionCPU.cpp  EdgeDetectionCPU.h  EdgeDetectionGPU.cu  EdgeDetectionGPU.h  SLAMEngine.cpp  SLAMEngine.h  SLAMFrame.cpp  SLAMFrame.h  SLAMModule.cpp  SLAMModule.h  SLAMModuleOutputs.h  SLAMModuleWrapper.cpp  SLAMModuleWrapper.h  SLAMPipeline.cpp  SLAMPipeline.h  SLAMPort.h  SLAMPortTypes.h  SLAMThread.cpp  SLAMThread.h  SLAMWorkLoad.cpp  SLAMWorkLoad.h  SLAMWorker.h  Semaphore.cpp  Semaphore.h  VideoModule.cpp  VideoModule.h  VideoPort.h
src/slam/old/: EKFSLAM.cpp  EKFSLAM.h  EdgeCirclesPort.cpp  EdgeDetectionGPU.cu  EdgeDetectionGPU.h  PoseLandmarksPort.cpp  PoseLandmarksPort.h  SLAMPipeline.h  VideoPort.cpp
src/stuff/: CMakeLists.txt  Histogram.cpp  Histogram.h
src/tools/: CMakeLists.txt
src/tracker/: CMakeLists.txt  CircleFitter.cpp  CircleFitter.h  LineFitter.h  Tracker.cpp  Tracker.h  TrackerCPUImpl.cpp  TrackerCPUImpl.h  TrackerGPUImpl.cu  TrackerGPUImpl.h  TrackerImpl.cu  TrackerImpl.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BuildInfo.h.in  CMakeLists.txt  CalibrationDialog.cpp  CalibrationDialog.h  CalibrationDialog.ui  CalibrationModel.cpp  CalibrationModel.h  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  ConfigDialog2.ui  DefaultEngineListener.cpp  DefaultEngineListener.h  EngineThread.cpp  EngineThread.h  MainWindow.cpp  MainWindow.h  VideoWidget.cpp  VideoWidget.h  ViewerWidget.cpp  ViewerWidget.h  ViewerWidgetBase.cpp  ressources.qrc
src/ui/resources/: resources_ui.qrc
src/ui/resources/background/: background.xcf
src/ui/resources/icons/enguerrand/: enguerrand.xcf  index.theme
src/video/: CMakeLists.txt  CalibrationData.cpp  CalibrationData.h  FileVideoSource.cpp  FileVideoSource.h  GenICamInterface.cpp  GenICamInterface.h  GenICamVideoSource.cpp  GenICamVideoSource.h  ImageVideoSource.cpp  ImageVideoSource.h  OpenCVVideoSource.cpp  OpenCVVideoSource.h  RealsenseInterface.cpp  RealsenseInterface.h  RealsenseVideoSource.cpp  RealsenseVideoSource.h  VideoFrame.cpp  VideoFrame.h  VideoInput.cpp  VideoInput.h  VideoSource.cpp  VideoSource.h
tools/: calibrate.py  tbb_graph.dot
tst/: CMakeLists.txt  fitting.cpp  odometry.cpp
tst/fitting/: CMakeLists.txt  TestFitting.cpp  TestFitting.h  main.cpp
tst/odometry/: CMakeLists.txt  TestOdometry.cpp  TestOdometry.h
tst/staticodometry/: CMakeLists.txt  Test.cpp  Test.h
