
add_executable(
    enguerrand_frontend
    main.cpp
    Semaphore.h
    Semaphore.cpp
    Engine.h
    Engine.cpp
    EngineGraph.h
    EngineGraph.cpp
    EngineConfig.h
    EngineConfig.cpp
    EdgeDetectionCPU.h
    EdgeDetectionCPU.cpp
    CirclesTracker.h
    CirclesTracker.cpp
    CalibrationData.h
    CalibrationData.cpp
    TrackedCircle.h
    TrackedCircle.cpp
    OdometryCode.h
    OdometryCode.cpp
    EKFOdometry.h
    EKFOdometry.cpp
    CircleFitter.h
    CircleFitter.cpp
)

target_link_libraries(
    enguerrand_frontend
    PUBLIC
    ceres
    TBB::tbb
    TBB::tbbmalloc
    opencv_core
    opencv_imgproc
    opencv_imgcodecs
    opencv_imgcodecs
    opencv_imgproc
    opencv_highgui
    Qt5::Core
    Threads::Threads
    Sophus::Sophus
    enguerrand_video
    enguerrand_stuff
)

